# TestPOCO

./: .gitignore  CMakeLists.txt  main.cpp
cmake/: find_poco.cmake  find_zlib.cmake
contrib/: CMakeLists.txt
contrib/zlib-ng/: deflate.c
contrib/zlib-ng/arch/x86/: x86.c  x86.h
